# azkar

./: .gitignore  LICENSE  README.md  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: build_exe.ps1  make_icon.py  make_sound.py
src/azkar/: __init__.py  __main__.py  app.py  autostart.py  clock_scheduler.py  config.py  hijri.py  notifier.py  paths.py  scheduler.py  sound.py  tray.py
src/azkar/content/: __init__.py  dataset.py  json_provider.py  provider.py  user_store.py
src/azkar/content/data/: SOURCES.md  arbaeen_nawawi.json  azkar.json  evening_azkar.json  hadith.json  morning_azkar.json  tasbih.json
src/azkar/reminders/: __init__.py  base.py  startup_dialog.py  tasbih_toast.py
src/azkar/ui/: __init__.py  cards.py  icon.py  main_window.py  pages.py  rtl.py  settings_dialog.py  theme.py  widgets.py
tests/: test_config.py  test_content_provider.py  test_datasets.py  test_scheduling.py  test_user_store.py
